--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                      </div>
 
                      <div class="col-md-4 status">
-                        <h5>$1,278</h5>
-                        <h5>$0</h5>
-                        <h5>$1,278</h5>
+                        <h5 id="sub-total">$1,278</h5>
+                        <h5 id="tax-amount">$0</h5>
+                        <h5 id="total">$1,278</h5>
                      </div>
                   </div>
                </div>
